--- a/barbearia2.0/index.html
+++ b/barbearia2.0/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Reis Do Cortes </title>
+    <title>Reis Do Cortes teste atualização </title>
 </head>
 
 <body>
